--- a/gestor-tareas/Views/Home/Index.cshtml
+++ b/gestor-tareas/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="center-block">
 
-                <h1><a asp-area="Identity" asp-page="/Account/Login">Login</a></h1>
+                <h1><a asp-area="Identity" asp-page="/Account/Login">Inicie sesión en el gestor de tareas</a></h1>
 </div>
 
 
