--- a/web_portafolio/Views/Auth/ChangePass.cshtml
+++ b/web_portafolio/Views/Auth/ChangePass.cshtml
@@ -1,4 +1,4 @@
-﻿@model SGM_INSPECCION_DIGITAL.Models.HomeViewModel
+﻿@model web_portafolio.Models.HomeViewModel
 @{
     ViewBag.Title = "Cambiar Contraseña";
 }
