--- a/web_portafolio/Views/Auth/Login.cshtml
+++ b/web_portafolio/Views/Auth/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model SGM_INSPECCION_DIGITAL.Models.LoginView
+﻿@model web_portafolio.Models.LoginView
 @{
     ViewBag.Title = "Inicio de Sesión";
     Layout = "~/Views/Shared/_LoginPartial.cshtml";
