--- a/web_portafolio/Views/Shared/_Layout.cshtml
+++ b/web_portafolio/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model SGM_INSPECCION_DIGITAL.Models.ViewModelBase
+@model web_portafolio.Models.ViewModelBase
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,7 +7,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>@ViewBag.Title</title>
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="../Content/assets/vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../Content/assets/vendor/fonts/circular-std/style.css">
@@ -26,7 +25,6 @@
     <link rel="stylesheet" type="text/css" href="../Content/assets/vendor/datatables/css/buttons.bootstrap4.css">
     <link rel="stylesheet" type="text/css" href="../Content/assets/vendor/datatables/css/select.bootstrap4.css">
     <link rel="stylesheet" type="text/css" href="../Content/assets/vendor/datatables/css/fixedHeader.bootstrap4.css">
-
     <!-- Optional JavaScript -->
     <script src="../Content/assets/vendor/jquery/jquery-3.3.1.min.js"></script>
     <script src="../Content/assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
@@ -56,10 +54,9 @@
     <script src="../Content/Highcharts/exporting.js"></script>
     <script src="../Content/assets/vendor/charts/morris-bundle/raphael.min.js"></script>
     <script src="../Content/assets/vendor/charts/morris-bundle/morris.js"></script>
-
     @RenderSection("scripts", required: false)
-
     <style>
+
         .dataTables_wrapper .dataTables_paginate .paginate_button:hover {
             background: none;
             color: black !important;
@@ -83,7 +80,6 @@
             timer: 2000
         });
     </script>
-
     <div class="dashboard-main-wrapper">
         <!-- navbar -->
         <div class="dashboard-header">
@@ -91,7 +87,6 @@
                 <a class="navbar-brand"><img src="~/Content/assets/images/logo.png" alt="" style="height:40px;">&nbsp; Portafolio</a>
             </nav>
         </div>
-
         <!-- lesft sidebar -->
         <div class="nav-left-sidebar sidebar-dark">
             <div class="menu-list">
@@ -118,37 +113,40 @@
                             </li>
                             <li class="nav-divider">
                             <li class="nav-item ">
-                                <a class="nav-link active" href="#"><i class="fa fa-fw fa-search"></i>Alertas <span class="badge badge-success">6</span></a>
-                                <a class="nav-link active" href="#"><i class="fa fa-fw fa-search"></i>Consultas <span class="badge badge-success">6</span></a>
-                                <a class="nav-link active" href="#"><i class="fa fa-fw fa-search"></i>Tareas <span class="badge badge-success">6</span></a>
+                                @if (Model.Modules.Contains("5")) {
+                                    <a class="nav-link active" href="#"><i class="fa fa-fw fa-search"></i>Alertas <span class="badge badge-success">6</span></a>
+                                }
+                                @if (Model.Modules.Contains("1")) {
+                                    <a class="nav-link active" href="~/Tasks/Create"><i class="fa fa-fw fa-file-archive"></i>Crear Tarea<span class="badge badge-success">6</span></a>
+                                }
+                                @if (Model.Modules.Contains("2")) {
+                                    <a class="nav-link active" href="~/Tasks/Index"><i class="fa fa-fw fa-file-archive"></i>Tareas <span class="badge badge-success">6</span></a>
+                                }
+                                @if (Model.Modules.Contains("4")) {
+                                    <a class="nav-link active" href="#"><i class="fa fa-fw fa-search"></i>Procesos <span class="badge badge-success">6</span></a>
+                                }
+                                @if (Model.Modules.Contains("3")) {
+                                    <a class="nav-link active" href="#"><i class="fa fa-fw fa-search"></i>Backlog <span class="badge badge-success">6</span></a>
+                                }
+
                             </li>
                             <li class="nav-divider">
                             <li class="nav-item">
-                                <a class="nav-link active" href="@(Url.Action("Logout", "Auth"))"><i class="fas fa-power-off"></i>Cerrar Sesión<span class="badge badge-success">6</span></a>
+                                <a class="nav-link active" href="@(Url.Action("ChangePass", "Auth"))"><i class="fas fa-cog mr-2"></i>Cambiar Contraseña</a>
+                                <a class="nav-link active" href="@(Url.Action("Logout", "Auth"))"><i class="fas fa-power-off mr-2"></i>Cerrar Sesión</a>
                             </li>
+                            <li class="nav-divider">
                         </ul>
                     </div>
                 </nav>
             </div>
         </div>
-        <!-- wrapper -->
         <div class="dashboard-wrapper">
             <div class="container-fluid dashboard-content ">
                 @RenderBody()
             </div>
-            @* <div class="footer">
-                <div class="container-fluid">
-                                    <div class="row">
-                                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
-                                            Copyright © 2018 Concept. All rights reserved. Dashboard by <a href="https://colorlib.com/wp/">Colorlib</a>.
-                            </div>
-                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
-                                <div class="text-md-right footer-links d-none d-sm-block"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div*@
         </div>
     </div>
+    @ModalLoading.Modal();
 </body>
 </html>
