--- a/web_portafolio/Views/Tasks/Create.cshtml
+++ b/web_portafolio/Views/Tasks/Create.cshtml
@@ -4,6 +4,7 @@
     ViewBag.Title = "Tarea";
     List<web_portafolio.Models.User> usuarios = new web_portafolio.Controllers.TasksController().getUsersByUnitForSelect(Model.Token, Model.Unit).Result;
     List<web_portafolio.Models.TaskModel> tasks = new web_portafolio.Controllers.TasksController().getTasksByUser(Model.Token, Model.Id).Result;
+    List<web_portafolio.Models.ProcessModel> process = new web_portafolio.Controllers.TasksController().getProcessByUser(Model.Token, Model.Id).Result;
 }
 
 
@@ -70,7 +71,19 @@
                                 </select>
                                 <div class="invalid-feedback" id="lblError">Campo Requerido</div>
                             </div>
-                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-6 col-12">
+                            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3 col-12">
+                                <label for="proceso" class="col-form-label">Proceso</label>
+                                <select class="form-control" id="proceso">
+                                    <option value="-1">Seleccionar</option>
+                                    @{
+                                        foreach (web_portafolio.Models.ProcessModel s in process) {
+                                            <option value="@s.id">@s.name</option>
+                                        }
+                                    }
+                                </select>
+                                <div class="invalid-feedback" id="lblError">Campo Requerido</div>
+                            </div>
+                            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3 col-12">
                                 <label for="estado" class="col-form-label">Estado</label>
                                 <select class="form-control" id="estado" disabled>
                                     <option value="0">Pendiente</option>
