create template working

--- a/web_portafolio/Views/Shared/_Layout.cshtml
+++ b/web_portafolio/Views/Shared/_Layout.cshtml
@@ -113,25 +113,10 @@
                             </li>
                             <li class="nav-divider">
                             <li class="nav-item ">
-                                @if (Model.Modules.Contains("5")) {
-                                    <a class="nav-link active" href="#"><i class="fa fa-fw fa-search"></i>Alertas <span class="badge badge-success">6</span></a>
-                                }
-                                @if (Model.Modules.Contains("4")) {
-                                    <a class="nav-link active" href="~/Tasks/Index"><i class="fa fa-fw fa-file-archive"></i>Procesos <span class="badge badge-success">6</span></a>
-                                }
-                                @if (Model.Modules.Contains("1")) {
-                                    <a class="nav-link active" href="~/Tasks/Create"><i class="fa fa-fw fa-file-archive"></i>Crear Tarea<span class="badge badge-success">6</span></a>
-                                }
-                                @if (Model.Modules.Contains("2")) {
-                                    <a class="nav-link active" href="~/Tasks/Index"><i class="fa fa-fw fa-file-archive"></i>Mis Tareas <span class="badge badge-success">6</span></a>
-                                }
-                                @if (Model.Modules.Contains("6")) {
-                                    <a class="nav-link active" href="~/Tasks/Index"><i class="fa fa-fw fa-file-archive"></i>Mi Unidad<span class="badge badge-success">6</span></a>
-                                }
-                                @if (Model.Modules.Contains("3")) {
-                                    <a class="nav-link active" href="#"><i class="fa fa-fw fa-search"></i>Backlog <span class="badge badge-success">6</span></a>
-                                }
-
+                                <a class="nav-link active" href="~/Process/Backlog"><i class="fa fa-fw fa-file-archive"></i>Backlog<span class="badge badge-success">6</span></a>
+                                <a class="nav-link active" href="~/Process/Create"><i class="fa fa-fw fa-file-archive"></i>Crear Proceso<span class="badge badge-success">6</span></a>
+                                <a class="nav-link active" href="~/Tasks/Create"><i class="fa fa-fw fa-file-archive"></i>Crear Tarea<span class="badge badge-success">6</span></a>
+                                <a class="nav-link active" href="~/Template/Create"><i class="fa fa-fw fa-file-archive"></i>Crear Tipo de Proceso<span class="badge badge-success">6</span></a>
                             </li>
                             <li class="nav-divider">
                             <li class="nav-item">
