--- a/web_portafolio/Views/Shared/_Layout.cshtml
+++ b/web_portafolio/Views/Shared/_Layout.cshtml
@@ -112,13 +112,29 @@
                                 <a class="nav-link active" href="@(Url.Action("Index", "Home"))"><i class="fa fa-fw fa-home"></i>Inicio <span class="badge badge-success">6</span></a>
                             </li>
                             <li class="nav-divider">
+                                Procesos
+                            </li>
                             <li class="nav-item ">
                                 <a class="nav-link active" href="~/Process/Backlog"><i class="fa fa-fw fa-file-archive"></i>Backlog<span class="badge badge-success">6</span></a>
-                                <a class="nav-link active" href="~/Process/Create"><i class="fa fa-fw fa-file-archive"></i>Crear Proceso<span class="badge badge-success">6</span></a>
-                                <a class="nav-link active" href="~/Tasks/Create"><i class="fa fa-fw fa-file-archive"></i>Crear Tarea<span class="badge badge-success">6</span></a>
-                                <a class="nav-link active" href="~/Template/Create"><i class="fa fa-fw fa-file-archive"></i>Crear Tipo de Proceso<span class="badge badge-success">6</span></a>
+                                <a class="nav-link active" href="~/Process/Create"><i class="fa fa-fw fa-file-archive"></i>Crear<span class="badge badge-success">6</span></a>
                             </li>
                             <li class="nav-divider">
+                                Tareas
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-link active" href="~/Tasks/Workload"><i class="fa fa-fw fa-file-archive"></i>Asignaciones<span class="badge badge-success">6</span></a>
+                                <a class="nav-link active" href="~/Tasks/Create"><i class="fa fa-fw fa-file-archive"></i>Crear<span class="badge badge-success">6</span></a>
+                            </li>
+                            <li class="nav-divider">
+                                Tipo de Procesos
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-link active" href="~/Template/Show"><i class="fa fa-fw fa-file-archive"></i>Ver<span class="badge badge-success">6</span></a>
+                                <a class="nav-link active" href="~/Template/Create"><i class="fa fa-fw fa-file-archive"></i>Crear<span class="badge badge-success">6</span></a>
+                            </li>
+                            <li class="nav-divider">
+                                Sesión
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link active" href="@(Url.Action("ChangePass", "Auth"))"><i class="fas fa-cog mr-2"></i>Cambiar Contraseña</a>
                                 <a class="nav-link active" href="@(Url.Action("Logout", "Auth"))"><i class="fas fa-power-off mr-2"></i>Cerrar Sesión</a>
