--- a/web_portafolio/Views/Shared/_Layout.cshtml
+++ b/web_portafolio/Views/Shared/_Layout.cshtml
@@ -119,6 +119,11 @@
                                     </li>
                                     <li class="nav-item ">
                                         @{
+                                            if (Model.Modules.Contains("7")) {
+                                                <a class="nav-link active" href="~/Process/Create"><i class="fa fa-fw fa-file-archive"></i>Alertas<span class="badge badge-success">6</span></a>
+                                            }
+                                        }
+                                        @{
                                             if (Model.Modules.Contains("1")) {
                                                 <a class="nav-link active" href="~/Process/Backlog"><i class="fa fa-fw fa-file-archive"></i>Backlog<span class="badge badge-success">6</span></a>
                                             }
@@ -141,6 +146,11 @@
                                         @{
                                             if (Model.Modules.Contains("3")) {
                                                 <a class="nav-link active" href="~/Tasks/Workload"><i class="fa fa-fw fa-file-archive"></i>Asignaciones<span class="badge badge-success">6</span></a>
+                                            }
+                                        }
+                                        @{
+                                            if (Model.Modules.Contains("8")) {
+                                                <a class="nav-link active" href="~/Tasks/Rejection"><i class="fa fa-fw fa-file-archive"></i>Rechazos<span class="badge badge-success">6</span></a>
                                             }
                                         }
                                         @{
