--- a/web_portafolio/Views/Process/Backlog.cshtml
+++ b/web_portafolio/Views/Process/Backlog.cshtml
@@ -26,6 +26,7 @@
                                 <th>Nombre</th>
                                 <th>Fecha Termino</th>
                                 <th>Realizadas</th>
+                                <th>Trabajando</th>
                                 <th>Pendientes</th>
                                 <th>Avance</th>
                                 <th>Seleccionar</th>
