--- a/web_portafolio/Views/Shared/_Layout.cshtml
+++ b/web_portafolio/Views/Shared/_Layout.cshtml
@@ -120,7 +120,7 @@
                                     <li class="nav-item ">
                                         @{
                                             if (Model.Modules.Contains("7")) {
-                                                <a class="nav-link active" href="~/Process/Create"><i class="fa fa-fw fa-file-archive"></i>Alertas<span class="badge badge-success">6</span></a>
+                                                <a class="nav-link active" href="~/Process/Alerts"><i class="fa fa-fw fa-file-archive"></i>Alertas<span class="badge badge-success">6</span></a>
                                             }
                                         }
                                         @{
