--- a/web_portafolio/Views/Tasks/Rejection.cshtml
+++ b/web_portafolio/Views/Tasks/Rejection.cshtml
@@ -4,12 +4,10 @@
     ViewBag.Title = "Rechazos";
 }
 
-<h2>Rechazos</h2>
-
 <div class="row">
     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
         <div class="page-header">
-            <p class="pageheader-text"><div id="lblTitle"><h2 class="pageheader-title">Asignaciones</h2></div></p>
+            <p class="pageheader-text"><div id="lblTitle"><h2 class="pageheader-title">Rechazos</h2></div></p>
         </div>
         <div class="row">
 
