--- a/web_portafolio/Views/Process/Alerts.cshtml
+++ b/web_portafolio/Views/Process/Alerts.cshtml
@@ -5,14 +5,14 @@
 
 <div class="row">
     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-        <div class="page-header">
+        <div class="page-header" >
             <p class="pageheader-text"><div id="lblTitle"><h2 class="pageheader-title">Alertas</h2></div></p>
         </div>
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-4 col-12">
                 <div class="card">
-                    <div class="card-title">
-                        <h5 class="card-header">Vencidas</h5>
+                    <div class="card-title" >
+                        <h5 class="card-header" style="background-color: #C70039; color:white;">Vencidas</h5>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
@@ -34,7 +34,7 @@
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-4 col-12">
                 <div class="card">
                     <div class="card-title">
-                        <h5 class="card-header">Próximas a Vencer</h5>
+                        <h5 class="card-header" style="background-color: #FFC300; color:white;">Próximas a Vencer</h5>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
@@ -55,8 +55,8 @@
 
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-4 col-12">
                 <div class="card">
-                    <div class="card-title">
-                        <h5 class="card-header">A Tiempo</h5>
+                    <div class="card-title" >
+                        <h5 class="card-header" style="background-color: #007C35; color:white;">A Tiempo</h5>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
