--- a/web_portafolio/Views/Shared/_Layout.cshtml
+++ b/web_portafolio/Views/Shared/_Layout.cshtml
@@ -144,6 +144,11 @@
                                     </li>
                                     <li class="nav-item ">
                                         @{
+                                            if (Model.Modules.Contains("9")) {
+                                                <a class="nav-link active" href="~/Tasks/MyTasks"><i class="fa fa-fw fa-file-archive"></i>Mis Tareas<span class="badge badge-success">6</span></a>
+                                            }
+                                        }
+                                        @{
                                             if (Model.Modules.Contains("3")) {
                                                 <a class="nav-link active" href="~/Tasks/Workload"><i class="fa fa-fw fa-file-archive"></i>Asignaciones<span class="badge badge-success">6</span></a>
                                             }
